--- a/homework/hw-10.md
+++ b/homework/hw-10.md
@@ -22,6 +22,10 @@ This lab features a gallery of several canonical plot types made in
     able to get your code *working* fairly easily, so pay some attention
     to getting your code simple, readable, and well-formatted.
 
+  - While reproducing all five of these plots in `seaborn` will give you
+    the most practice with its functionality, if you are short on time,
+    it is fine to select three of them to do.
+
 As you begin this journey from `ggplot2` users to `seaborn` users, I
 encourage you to read a [blog
 post](https://robinsones.github.io/Better-Plotting-in-Python-with-Seaborn/)
