--- a/homework/hw-10.md
+++ b/homework/hw-10.md
@@ -6,7 +6,7 @@ Homework 10
 This lab features a gallery of several canonical plot types made in
 `ggplot2`. Your task is to recreate them using `seaborn` and
 `matplotlib`. As you work, I recommend using as a reference seaborns
-[excellent documentation](https://seaborn.pydata.org/).
+[excellent web documentation](https://seaborn.pydata.org/).
 
   - You’re welcome to use the atomic `seaborn` plot functions
     (`scatterplot()`, `boxplot()`, etc.) or their wrapper equivalents
@@ -169,6 +169,7 @@ penguins %>%
   geom_line() +
   geom_point() +
   lims(y = c(0, 6000)) +
+  labs(x = "average body mass (g)") +
   scale_x_date(date_breaks = "1 year")
 ```
 
