--- a/lectures/13-classes-and-objects-slides.Rmd
+++ b/lectures/13-classes-and-objects-slides.Rmd
@@ -351,7 +351,8 @@ class car:
     self.mpg = mpg
  
   def greet(self):
-    print("Hello, I am a " + self.make + " " + self.model + ".")
+    print("Hello, I am a " + self.make +
+          " " + self.model + ".")
 
 ```
 
